[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://GI_Sprite.gd" type="Script" id=2]

[node name="GI_Sprite" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="EmissiveSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AlbedoSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )
